--- a/platformio.ini
+++ b/platformio.ini
@@ -1,10 +1,12 @@
 [platformio]
 default_envs = teensylc
+src_dir = launchpad_controller
 
 [env]
 lib_deps = 
   Adafruit NeoPixel@1.5.0
-  http://www.airspayce.com/mikem/arduino/RadioHead/RadioHead-1.97.zip
+;  http://www.airspayce.com/mikem/arduino/RadioHead/RadioHead-1.97.zip
+  https://github.com/PaulStoffregen/RadioHead
 
 [env:teensylc]
 platform = teensy
