working sketch with PlatformIO and Teensy LC

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
 [platformio]
-default_envs = teensylc
+default_envs = controller
 src_dir = launchpad_controller
 
 [env]
@@ -8,7 +8,16 @@ lib_deps =
 ;  http://www.airspayce.com/mikem/arduino/RadioHead/RadioHead-1.97.zip
   https://github.com/PaulStoffregen/RadioHead
 
-[env:teensylc]
+[env:controller]
 platform = teensy
 board = teensylc
 framework = arduino
+src_filter =
+  +<*controller*>
+
+[env:gateway]
+platform = teensy
+board = teensylc
+framework = arduino
+src_filter =
+  +<*gateway*>
