--- a/platformio.ini
+++ b/platformio.ini
@@ -7,6 +7,10 @@ lib_deps =
   Adafruit NeoPixel@1.5.0
 ;  http://www.airspayce.com/mikem/arduino/RadioHead/RadioHead-1.97.zip
   https://github.com/PaulStoffregen/RadioHead
+build_flags = 
+  '-D BONJOUR="LAUNCHPADCONTROLLER"'
+  -D RFM_TX_POWER=10 ; Can be set between 5 and 23 dBm
+  -D BAUDRATE=115200
 
 [env:controller]
 platform = teensy
