--- a/platformio.ini
+++ b/platformio.ini
@@ -7,10 +7,13 @@ lib_deps =
   Adafruit NeoPixel@1.5.0
 ;  http://www.airspayce.com/mikem/arduino/RadioHead/RadioHead-1.97.zip
   https://github.com/PaulStoffregen/RadioHead
+  https://github.com/PaulStoffregen/PWMServo
 build_flags = 
   '-D BONJOUR="LAUNCHPADCONTROLLER"'
-  -D RFM_TX_POWER=10 ; Can be set between 5 and 23 dBm
   -D BAUDRATE=115200
+  -D RFM_TX_POWER=10 ; LoRa transmit power. Can be set between 5 and 23 dBm
+  -D SERVO_MIN_PULSE_WIDTH=1000 ; microseconds
+  -D SERVO_MAX_PULSE_WIDTH=2000 ; microseconds
 
 [env:controller]
 platform = teensy
