--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,9 @@ board = teensylc
 framework = arduino
 src_filter =
   +<*controller*>
+build_flags = 
+  ${env.build_flags}
+  -D STARTUP_COLOR=0x3333ff ; ~Blue
 
 [env:gateway]
 platform = teensy
@@ -28,3 +31,6 @@ board = teensylc
 framework = arduino
 src_filter =
   +<*gateway*>
+build_flags = 
+  ${env.build_flags}
+  -D STARTUP_COLOR=0xcc0066 ; ~Pink
