move freq definition to platformio.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@ lib_deps =
 build_flags = 
   '-D BONJOUR="LAUNCHPADCONTROLLER"'
   -D BAUDRATE=115200
+  -D RFM_FREQ=433.0f
   -D RFM_TX_POWER=10 ; LoRa transmit power. Can be set between 5 and 23 dBm
   -D SERVO_MIN_PULSE_WIDTH=1000 ; microseconds
   -D SERVO_MAX_PULSE_WIDTH=2000 ; microseconds
